--- a/w2p_model_day2.ipynb
+++ b/w2p_model_day2.ipynb
@@ -704,7 +704,7 @@
     "        if Bpos in lookup_df.index:\n",
     "            tail_id_pos = lookup_df.loc[Bpos]['Tail']\n",
     "            if tail_id_pos in self.tail2idx:\n",
-    "                logits_pos = self.classifier(eprime_last.unsqueeze(0))\n",
+    "                logits_pos = self.classifier(eprime_next.unsqueeze(0))\n",
     "                target_pos = torch.tensor([self.tail2idx[tail_id_pos]], device=self.device)\n",
     "                total_loss = total_loss + F.cross_entropy(logits_pos, target_pos)\n",
     "\n",
