--- a/w2p_model_training_lmhead_only (1).ipynb
+++ b/w2p_model_training_lmhead_only (1).ipynb
@@ -118,25 +118,10 @@
     "print(f\"🧾 Sample NID: {sample_nid}\\n📝 Headline: {nid2body[sample_nid][:300]}\")"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "08fb8c2d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Loaded sid2sum with 20600 items\n",
-      "🧾 Sample SID: SUMM1\n",
-      "📝 Summary: Legal battle looms over Trump EPA's rule change of Obama's Clean Power Plan rule\n"
-     ]
-    }
-   ],
+ 
    "source": [
     "# Load sid2sum from pickle\n",
-    "with open(\"sid2sum_test.pkl\", \"rb\") as f:\n",
+    "with open(\"sid2sum.pkl\", \"rb\") as f:\n",
     "    sid2sum = pickle.load(f)\n",
     "\n",
     "# Debug print\n",
@@ -165,7 +150,7 @@
     "\n",
     "\n",
     "# === Load Embeddings ===\n",
-    "with open(\"testsum_T5.pkl\", \"rb\") as f:\n",
+    "with open(\"summary_T5.pkl\", \"rb\") as f:\n",
     "    summary_embed = {k: torch.tensor(v, dtype=torch.float32, device=device) for k, v in pickle.load(f).items()}\n",
     "with open(\"newsbody_T5.pkl\", \"rb\") as f:\n",
     "    newsbody_embed = {k: torch.tensor(v, dtype=torch.float32, device=device) for k, v in pickle.load(f).items()}\n",
